--- a/public/assets/css/marketplace/marketplace.css
+++ b/public/assets/css/marketplace/marketplace.css
@@ -5764,7 +5764,7 @@ blockquote {
 }
 
 .title {
-    margin-bottom: 20px;
+    margin-bottom: 8px;
     font-family: Montserrat, sans-serif;
     color: #6a35ff
 }
